[package]
name = "josephus"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Josephus problem solver"
repository = "https://github.com/oovm/josephus-problem"
documentation = "https://docs.rs/josephus"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
tracing = "0.1.37"

[dev-dependencies]

[features]
default = []
